# telegram-bot-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.gitea/workflows/: build.yml
.github/workflows/: ci.yml
src/telegram_bot_mcp/: __init__.py  __main__.py  auth.py  server.py  telegram.py
